[package]
name = "fup"
version = "0.6.0"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
edition = "2018"
repository = "https://git.asdf.dk/hroi/filterupdater"
license = "MIT"

[dependencies]
bufstream = "0.1"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
toml = "0.5"
hashbrown = { version = "0.3" , optional = true }
