[package]
name = "fup"
version = "0.7.4"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
edition = "2018"
repository = "https://github.com/hroi/filterupdater"
license = "MIT"
readme = "README.md"
description = "Simple bgpq3 alternative in Rust. Generates prefix-lists/sets for Cisco routers using IRR data."
keywords = ["bgp", "cidr"]
categories = ["command-line-utilities", "networking"]

[dependencies]
bufstream = "0.1"
serde = "1.0"
serde_derive = "1.0"
time = "0.2"
toml = "0.5"
